--- a/client/style.css
+++ b/client/style.css
@@ -5,8 +5,15 @@
 }
 
 body {
-    background-color: #222;
+    padding: 1rem;
+    background-color: #333;
     color: #eee;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    height: 100vh;
 }
 
 .hide {
